# nera_bot

./: CMakeLists.txt  README.md  package.xml
config/: D435i_realsense.yaml  camera.rviz  depth_cloud.rviz  depth_to_laser.yaml  explore.rviz  gz_bridge.yaml  imu_filter.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  robot_localization.yaml  twist_mux.yaml  view_bot.rviz
description/: depth_camera.xacro  imu.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
docker/: DockerFile
install/: local_setup.sh  setup.sh
install/nera_bot/share/nera_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nera_bot/share/nera_bot/cmake/: nera_botConfig-version.cmake  nera_botConfig.cmake
install/nera_bot/share/nera_bot/config/: D435i_realsense.yaml  camera.rviz  empty.yaml  gaz_ros2_ctl_use_sim.yaml  gz_bridge.yaml  imu_filter.yaml  joystick.yaml  my_controllers.yaml  robot_localization.yaml  twist_mux.yaml  view_bot.rviz
launch/: camera.launch.py  depth_to_laser.launch.py  joystick.launch.py  launch_hardware.launch.py  launch_robot.launch.py  launch_sim.launch.py  nav2_explore.launch.py  rsp.launch.py  rtabmap.launch.py  slam.launch.py
log/: latest_build
upstart/: nera_bot_ros.service  robot_upstart_install.py  robot_upstart_install.sh  robot_upstart_uninstall.py  robot_upstart_uninstall.sh  service_file_network_update.sh  udev_hardware_rules.sh
worlds/: empty.world  map.sdf
(+17 files in other folders)
