<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nera_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <!-- Joystick control -->
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_stamper</depend>

  <!-- Camera -->
  <depend>realsense2_camera</depend>

  <!-- Depth to LaserScan -->
  <depend>depthimage_to_laserscan</depend>

  <!-- IMU Filter -->
  <depend>imu_filter_madgwick</depend>

  <!-- Message types -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>twist_mux</depend>
  <depend>robot_localization</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
